<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="290dp"
    android:layout_height="170dp"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:padding="20dp"
            android:text="@string/acceptConfirmation"
            android:textColor="@color/black"
            android:textStyle="bold"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center" >

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:background="@color/red"
            />


        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:background="#3BB9FF"
            />

    </LinearLayout>

</LinearLayout>