<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/user_2"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text"
            android:hint="@string/edit_message"
            android:inputType="text"
            android:singleLine="true" >
            <requestFocus/>
        </EditText>

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:drawableLeft="@drawable/lock_icon"
            android:background="@drawable/edit_text"
            android:hint="@string/edit_password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/login_button"
            style="@style/style_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="login"
            android:text="@string/btnLogin" />
        </LinearLayout>
    </RelativeLayout>